langtools/test/tools/javac/6304921/T6304921.out
T6304921.java:671/671/680: warning: [rawtypes] found raw type: java.util.ArrayList
missing type parameters for generic class java.util.ArrayList<E>
        List<Integer> list = new ArrayList();
                                 ^
T6304921.java:667/667/682: warning: [unchecked] unchecked conversion
found   : java.util.ArrayList
required: java.util.List<java.lang.Integer>
        List<Integer> list = new ArrayList();
                             ^
error: warnings found and -Werror specified
T6304921.java:727/733/737: cannot find symbol
symbol  : variable orr
location: class java.lang.System
        System.orr.println("abc"); // name not found
              ^
T6304921.java:812/816/822: operator + cannot be applied to int,boolean
        return 123 + true; // bad binary expression
                   ^
3 errors
2 warnings
